# django-subadmin

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  publish_test.yml
subadmin/: __init__.py  forms.py
subadmin/templates/subadmin/: breadcrumbs.html  change_form.html  change_list.html  delete_confirmation.html  delete_selected_confirmation.html  object_history.html  parent_change_form.html  submit_line.html
subadmin/templatetags/: subadmin_tags.py
