[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "django-subadmin"
dynamic = ["version"]
authors = [
    {name = "Mitja Pagon", email = "mitja@inueni.com"},
]
description = "A special kind of ModelAdmin that allows it to be nested within another ModelAdmin"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["django", "admin", "modeladmin", "foreignkey", "related field"]
license = {text = "MIT"}
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
]

[project.urls]
"Homepage" = "https://github.com/inueni/django-subadmin/"
"Bug Tracker" = "https://github.com/inueni/django-subadmin/issues"
"Changelog" = "https://github.com/inueni/django-subadmin/releases"

[tool.setuptools_scm]
local_scheme = "no-local-version"
